--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,45 @@
+
+/* header start */
+
 .header{
     width: 100%;
     padding: 20px 5%;
-    /* background-color: white; */
+    background-color: white;
     display: flex;
     justify-content: space-between;
 }
 
-input{
-    width: 20%;
-    padding: 10px;
-    font-size: 17px;
-    border-radius: 5px;
-    outline: none;
-    border: 1px solid gray;
-}
+  
+  .header h1 {
+    margin: 0;
+    font-size: 24px;
+  }
+  
+  .header input[type="text"],
+  .header input[type="date"] {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  .calendar {
+    display: flex;
+    align-items: center;
+  }
+  
+  .calendar h2 {
+    margin-right: 10px;
+    font-size: 18px;
+  }
+
+
+  /* Header End */
+
+
+
+  
+/* News article CSS */
 
 .news-aricles{
     width: 100%;
